# storyworld

./: .env_example  .gitmodules  README.md  modelfile  output_example.txt  pyproject.toml
src/storyworld/: main.py  stages.yaml  types.py
src/storyworld/characters/: athena.yaml  freya.yaml  gio.yaml
src/storyworld/crews/plot_development/: plot_development.py
src/storyworld/crews/plot_development/config/: agents.yaml  tasks.yaml
src/storyworld/crews/writers/: writers.py
src/storyworld/crews/writers/config/: agents.yaml  tasks.yaml
