[project]
name = "storyworld"
version = "0.1.0"
description = "storyworld using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "docling"
]

[project.scripts]
kickoff = "storyworld.main:kickoff"
plot = "storyworld.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
